--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "traverse": "^0.6.6"
   },
   "devDependencies": {
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-coffee": "^0.13.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-typescript": "^0.7.0",
