--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "traverse": "^0.6.6"
   },
   "devDependencies": {
-    "exectimer": "^1.0.2"
+    "ansi-256-colors": "^1.1.0",
+    "exectimer": "^1.0.2",
+    "xcolor": "^0.1.0"
   },
   "scripts": {
-    "server":      "node dev/server"
+    "server": "node dev/server"
   }
 }
